update get activities api
